--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^8.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.14.2",
     "ts-node-dev": "^1.1.8"
   }
 }
