--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client/book-data"]
-	path = client/book-data
+[submodule "client/public/book-data"]
+	path = client/public/book-data
 	url = https://github.com/essence-learning/book-data.git
