--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "prettier": "^3.3.1"
+    "prettier": "^3.3.1",
+    "react-router-dom": "^6.23.1"
   }
 }
