--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.24.0",
     "express": "^4.17.1",
     "mongoose": "^8.4.1",
     "ts-node": "^10.4.0",
