--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.0",
     "express": "^4.17.1",
+    "mdx-bundler": "^10.0.2",
     "mongoose": "^8.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
