--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/themes": "^3.0.5",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
