--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.11.0",
+    "@mantine/hooks": "^7.11.0",
     "@mdx-js/react": "^3.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/themes": "^3.0.5",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@tailwindcss/typography": "^0.5.13",
