--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "next-mdx-remote": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-latex": "^2.0.0",
     "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
