--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@tabler/icons-react": "^3.10.0",
     "@tailwindcss/typography": "^0.5.13",
     "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.0",
