--- a/client/package.json
+++ b/client/package.json
@@ -23,12 +23,15 @@
     "@types/three": "^0.165.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "katex": "^0.16.11",
     "lucide-react": "^0.395.0",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-katex": "^3.0.1",
     "react-latex": "^2.0.0",
+    "react-latex-next": "^3.0.0",
     "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
